# linuxCode

./: pubkey  pubkey.pub
algorithm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kmp.c  kmp.h  testkmp  testkmp.c
cpp_study/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cppio  cppio.cpp  study_note.txt  test.txt
mysql_study/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  mysql in cmake.html  mysql_test
solib/: CMakeCache.txt  CMakeLists.txt  Makefile  calc.h  cmake_install.cmake  compare.cpp  compare.h  compare1.cpp  max.c  max.h  testso  testso.cpp
